# wind-turbine-om-sim

./: .gitignore  BEARING_TEMPERATURE_OPTIMIZATION.md  QUICK_REFERENCE.md  README.md  fan_basis(1).json  hourly.csv  mockAIAnswer.ts  pyproject.toml  quick_verify.py  task_document.md  turbine_minute.csv  水轮机泵设备运维知识库.md
src/: __init__.py  main.py
src/analysis/: __init__.py  anomaly_detection.py  health_index.py  power_analysis.py
src/configs/: __init__.py  bearing_config.py  temperature_config.py  turbine_config.py  wind_field_config.py
src/simulations/: __init__.py
src/simulations/bearing/: __init__.py  bearing_temp_simulator.py  bearing_vibration_simulator.py
src/simulations/environment/: __init__.py  temperature_simulator.py
src/simulations/turbine/: __init__.py  task_document.md  wind_turbine_power_simu.py
src/simulations/wind/: __init__.py  wind_field_manager.py  wind_speed_simu.py
src/types/: index.py
src/visualization/: __init__.py  plots_bearing.py  plots_environment.py  plots_turbine.py  plots_wind.py
tests/: __init__.py  test_bearing.py  test_temperature.py  test_turbine.py  test_wind.py
