[tool.poetry]
name = "wind-turbine-om-sim"
version = "0.1.0"
description = "A simulation project for wind turbine operations and maintenance."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21"
matplotlib = "^3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"